# package-python-gradient-descent-1

./: C1_W1_Lab04_Gradient_Descent_Soln.ipynb  pyproject.toml  test.ipynb
template/: lab_utils_uni.py
tests/: test_ok.py
