[tool.poetry]
name = "gradient-descent-1"
version = "0.1.0"
description = "package python gradient descent"
authors = ["Julio Martinez del Pino <juliomdp92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
lab = "^8.0"
lab-utils = "^0.5.12"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
coverage = { extras = ["toml"], version = "7.4.*" }
black = { version = "23.12.*", allow-prereleases = true }
pytest = "7.4.*"
pytest-html = "4.1.*"
pytest-cov = "4.1.*"
pylint = "3.0.*"
python-decouple = "3.8"
mkdocs = "1.5.*"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
